Fix some whitespace and line height bugs

--- a/components/pages/DoubleWrapChars/DoubleWrapChars.module.scss
+++ b/components/pages/DoubleWrapChars/DoubleWrapChars.module.scss
@@ -97,6 +97,10 @@
                     calc(300ms + var(--char-index) * 0.01s) both var(--ease-out-circ);
             }
         }
+
+        [data-type='whitespace'] {
+            overflow: hidden;
+        }
     }
 }
 
